[package]
name = "ac-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
awc = { version = "3.0.1", features = ["openssl"] }
dotenv = "0.15.0"
env_logger = "0.9.1"
lazy_static = "1.4.0"
log = "0.4.17"
mysql_async = "0.30.0"
openssl = "0.10.42"
regex = "1.6.0"
